# sila-audio

./: .gitignore  CLAUDE.md  README.md  requirements.txt  run-sila.bat
sila/: main.py  security.py
sila/api/: imports.py  library.py  project.py  routes.py  sequencer.py
sila/engine/: audio.py  audio_loader.py  clock.py  fx.py  lfo.py  midi.py  sampler.py  sequencer.py
sila/export/: digitakt.py
sila/import_tool/: mapper.py  scanner.py
sila/mcp/: bridge.py
sila/models/: project.py  step.py
sila/storage/: project_store.py
sila/tests/: test_audio_engine.py  test_clock.py  test_export.py  test_import_tool.py  test_imports.py  test_library.py  test_routes.py  test_security.py  test_shutdown.py  test_step_model.py  test_ui_js.py
sila/ui/: app.js  import.html  import.js  index.html
vdigitakt/: main.py  security.py
vdigitakt/api/: routes.py
vdigitakt/engine/: audio.py  clock.py  fx.py  lfo.py  sampler.py  sequencer.py
vdigitakt/export/: digitakt.py
vdigitakt/models/: project.py
vdigitakt/storage/: project_store.py
vdigitakt/tests/: test_export.py  test_security.py
vdigitakt/ui/: app.js  index.html
vst/: CMakeLists.txt  DESIGN.md  README.md
vst/branding/: README.md
vst/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
vst/src/engine/: DigitaktExport.cpp  DigitaktExport.h  Library.cpp  Library.h  MidiExport.cpp  MidiExport.h  Project.h  ProjectJson.cpp  ProjectJson.h  Resample.h  Sampler.cpp  Sampler.h  Sequencer.cpp  Sequencer.h  VoiceMixer.cpp  VoiceMixer.h
vst/tests/: test_main.cpp
vst/webui/: bridge.js  index.html
